[gd_scene load_steps=12 format=3 uid="uid://b7a5aaeilaif4"]

[ext_resource type="Script" uid="uid://bl8pt7mve5l48" path="res://Hell/GUI/music_player.gd" id="1_nkgi7"]
[ext_resource type="Texture2D" uid="uid://0nwljxi2uo0d" path="res://Hell/GUI/MusicPlayer/music_bar.png" id="2_k4xj7"]
[ext_resource type="FontFile" uid="uid://fjt3f14rqfdo" path="res://Hell/GUI/Fonts/PIXELADE.TTF" id="3_5rohl"]
[ext_resource type="Texture2D" uid="uid://dx01sxoe7r3fc" path="res://Hell/GUI/MusicPlayer/play_butons.png" id="3_ba354"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a2ugy"]
atlas = ExtResource("3_ba354")
region = Rect2(95, 0, 22, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3pav"]
atlas = ExtResource("3_ba354")
region = Rect2(95, 12, 22, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8ia0"]
atlas = ExtResource("3_ba354")
region = Rect2(84, 0, 11, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqnhx"]
atlas = ExtResource("3_ba354")
region = Rect2(84, 12, 11, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjark"]
atlas = ExtResource("3_ba354")
region = Rect2(117, 0, 11.9, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnyht"]
atlas = ExtResource("3_ba354")
region = Rect2(117, 12, 11.9, 12)

[sub_resource type="LabelSettings" id="LabelSettings_rjark"]
font = ExtResource("3_5rohl")
font_size = 39
font_color = Color(0.494666, 0.0922059, 0, 1)

[node name="MusicPlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1772.0
offset_bottom = -987.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nkgi7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(68, 128)
scale = Vector2(4, 4)
texture = ExtResource("2_k4xj7")

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 184.0
offset_top = 60.0
offset_right = 206.0
offset_bottom = 72.0
scale = Vector2(4, 4)
focus_mode = 0
toggle_mode = true
texture_normal = SubResource("AtlasTexture_a2ugy")
texture_pressed = SubResource("AtlasTexture_p3pav")

[node name="PreviousButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 60.0
offset_right = 151.0
offset_bottom = 72.0
scale = Vector2(4, 4)
focus_mode = 0
texture_normal = SubResource("AtlasTexture_u8ia0")
texture_pressed = SubResource("AtlasTexture_nqnhx")

[node name="NextButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 60.0
offset_right = 283.0
offset_bottom = 72.0
scale = Vector2(4, 4)
focus_mode = 0
texture_normal = SubResource("AtlasTexture_rjark")
texture_pressed = SubResource("AtlasTexture_vnyht")

[node name="PlayingLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 16.0
offset_top = 8.0
offset_right = 312.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 24
text = "Currently not playing"
label_settings = SubResource("LabelSettings_rjark")
vertical_alignment = 1
clip_text = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="toggled" from="PlayButton" to="." method="_on_play_button_toggled"]
[connection signal="mouse_entered" from="PreviousButton" to="." method="_on_previous_button_mouse_entered"]
[connection signal="mouse_exited" from="PreviousButton" to="." method="_on_previous_button_mouse_exited"]
[connection signal="pressed" from="PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="mouse_entered" from="NextButton" to="." method="_on_next_button_mouse_entered"]
[connection signal="mouse_exited" from="NextButton" to="." method="_on_next_button_mouse_exited"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
